[package]
name = "ryanbytes"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.3", features = ["csr"] }
leptos_meta = "0.8.3"
leptos_router = "0.8.3"
log = "0.4.22"
console_log = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
